# 2025-p1-oiiDawn

./: README.md  endpoints.http  pyproject.toml
todo/views/: routes.py
